--- a/enslavedread.html
+++ b/enslavedread.html
@@ -267,7 +267,7 @@
 
 <body>
   <header>
-    <h1><a href="homepage.html" style="text-decoration:none; color:black;">Uncle Tom's Cabinet</a></h1>
+    <h1><a href="index.html" style="text-decoration:none; color:black;">Uncle Tom's Cabinet</a></h1>
     <p>The Civil Dispatches of a Nation Unhinged</p>
   </header>
 
