Update homepage link in civilwarapproach.html

--- a/civilwarapproach.html
+++ b/civilwarapproach.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Impending War with the South</title>
-<h2><a href="homepage.html" style="text-decoration:none; color:black; font-family:'UnifrakturCookk', cursive;">Click here to go back to the homepage</a></h2>
+<h2><a href="index.html" style="text-decoration:none; color:black; font-family:'UnifrakturCookk', cursive;">Click here to go back to the homepage</a></h2>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Spectral&display=swap" rel="stylesheet">
   <style>
     body {
