--- a/buywhip.html
+++ b/buywhip.html
@@ -193,7 +193,7 @@
 
 <body>
   <header>
-    <h1><a href="homepage.html" style="text-decoration:none; color:black;">Uncle Tom's Cabinet</a></h1>
+    <h1><a href="index.html" style="text-decoration:none; color:black;">Uncle Tom's Cabinet</a></h1>
     <p>Disclaimer: There are Affiliate Links Present!</p>
   </header>
 
