--- a/colonialpress.html
+++ b/colonialpress.html
@@ -306,7 +306,7 @@
 
   <div class="container">
     <h2>Local Printer Arrested After Publishing Scandalous “Opinion” — Crown Officials Alarmed by Presence of Thought'</h2>
-    <p class="author-date">By Johnny Magna | May 27, 1852</p>
+    <p class="author-date">By Johnny Magna VI | June 1, 1852</p>
 
 
 
@@ -356,3 +356,4 @@
   </footer>
 </body>
 </html>
+
