--- a/enslavedread.html
+++ b/enslavedread.html
@@ -283,22 +283,19 @@
   
 
     </div>
-    <div class="nav-item">
+     <div class="nav-item">
       <a href="#">Pastimes of the Privileged</a>
       <div class="dropdown">
-        <a href="#">Etiquette</a>
-        <a href="#">Fashion</a>
-        <a href="#">Home Life</a>
+        <a href="#">Let them eat cake!</a>
+        <a href="#">Activities</a>
+        <a href="#">The Art of Doing Nothing</a>
       </div>
     </div>
   
- <div class="nav-item">
-            <a href="#" style="text-decoration:none; color:#2c2c2c;" onmouseover="this.style.textDecoration='none'" onmouseout="this.style.textDecoration='none'">The Cabinet</a>
+    <div class="nav-item">
+      <a href="#">The Cabinet</a>
       <div class="dropdown">
-        <a href="buywhip.html">Trending items</a>
-       
-      </div>
-        
+        <a href="#">Trending Items</a>
       </div>
     </div>
 
