Update links and improve HTML structure

--- a/buywhip.html
+++ b/buywhip.html
@@ -208,11 +208,11 @@
     </div>
     </div>
     <div class="nav-item">
-            <a href="#" style="text-decoration:none; color:#2c2c2c;" onmouseover="this.style.textDecoration='none'" onmouseout="this.style.textDecoration='none'">Pastimes of The Privileged</a>
+      <a href="#">Pastimes of the Privileged</a>
       <div class="dropdown">
-        <a href="#">Etiquette</a>
-        <a href="#">Fashion</a>
-        <a href="#">Home Life</a>
+        <a href="#">Let them eat cake!</a>
+        <a href="#">Activities</a>
+        <a href="#">The Art of Doing Nothing</a>
       </div>
     </div>
 
